# geckopatcher

./: .gitignore  Cargo.toml  LICENSE  README.md
geckolib/: Cargo.toml
geckolib/src/: assembler.rs  banner.rs  config.rs  demangle.rs  dol.rs  framework_map.rs  lib.rs  linker.rs  logs.rs
geckolib/src/crypto/: mod.rs
geckolib/src/iso/: disc.rs  mod.rs  read.rs  write.rs
geckolib/src/iso/builder/: fs_source.rs  mod.rs
geckolib/src/patch/: assembler.rs  demangle.rs  dol.rs  framework_map.rs  linker.rs  mod.rs
geckolib/src/update/: mod.rs
geckolib/src/vfs/: mod.rs
gui/: Cargo.toml  index.html  rust-toolchain
gui/assets/: manifest.json  sw.js  worker.js
gui/common/: Cargo.toml
gui/native/: Cargo.toml
gui/native/src/: app.rs  lib.rs  main.rs  progress.rs
gui/src/: app.rs  lib.rs  main.rs
gui/web/: Cargo.toml  README.md  Trunk.toml  build.rs  cert.pem  index.html  key.pem  run_dev_server.sh  run_server.sh  rust-toolchain
gui/web/.cargo/: config.toml
gui/web/assets/: .gitignore  app_worker.js  manifest.json.in  tracing_hooks.js
gui/web/assets/patches/: 0.5.0-gcn-ntscu.patch  0.5.0-wii-ntscu-10.patch  1.0.0-gcn-ntscu.patch  1.0.0-wii-ntscu-10.patch  mapping.json  meta.json
gui/web/src/: io.rs  lib.rs  progress.rs
patcher/: Cargo.toml
patcher/examples/: title.rs
patcher/src/: main.rs
romhack/: Cargo.toml
romhack/examples/: gen.rs  reproc.rs  title.rs
romhack/src/: cli.rs  lib.rs  main.rs  progress.rs
