[package]
name = "geckolib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "geckolib"
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { version = "^0.2", optional = true }
log = "^0.4"
aes = "^0.7"
sha1_smol = "^1.0"
block-modes = { version = "^0.8" }
eyre = "^0.6"
thiserror = "^1.0"
toml = "^0.7"
async-stream = "^0.3"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
serde = "^1.0"
serde_derive = "^1.0"
byteorder = "^1.4"
async-std = { version = "^1.12", default-features = false, features = ["std"] }
image = "^0.24"
goblin = "^0.7"
lazy_static = "^1.4"
pin-project = "^1.1"
rayon = { version = "^1.7", optional = true }

[features]
default = ["parallel", "log"]
web = ["dep:wasm-bindgen"]
parallel = ["dep:rayon"]
log = ["async-std/log"]
