[package]
name = "geckolib"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "geckolib"
path = "src/lib.rs"

[dependencies]
log = "^0.4"
aes = "^0.8"
sha1_smol = "^1.0"
cbc = { version = "^0.1" }
eyre = "^0.6"
thiserror = "^1.0"
num = "^0.4"
toml = "^0.8"
zip = { version = "^2.1", default-features = false, features = ["deflate"] }
regex = "^1.10"
rustc-demangle = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
byteorder = "^1.4"
async-std = { version = "^1.12", default-features = false, features = [
    "std",
    "async-io",
    "futures-lite",
    "pin-project-lite",
    "gloo-timers",
] }
image = { version = "^0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
goblin = "^0.8"
lazy_static = "^1.5"
pin-project = "^1.1"
rayon = { version = "^1.10", optional = true }
human_bytes = { version = "^0.4", optional = true, default-features = false }
static_assertions = "^1.1"
standalone-syn = "^0.13"
encoding_rs = "^0.8"

[features]
default = ["parallel", "log"]
web = []
parallel = ["rayon", "image/rayon"]
log = ["async-std/default"]
progress = ["human_bytes"]
