[package]
name = "gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "^0.22"
eframe = { version = "^0.22", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd = {version = "^0.11", default-features = false, features = ["xdg-portal"]}
log = "^0.4"

# You only need serde if you want app persistence:
serde = { version = "^1.0", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
geckolib = { path = "../geckolib", features = ["progress"] }
env_logger = "^0.10"
futures-lite = "^1.13"
async-std = "^1.12"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
geckolib = { path = "../geckolib", default-features = false, features = ["log", "web"] }
console_log = "^1.0"
js-sys = "^0.3"
serde-wasm-bindgen = "^0.5"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
wasm-rs-async-executor = "^0.9"
wee_alloc = "^0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "^0.3"
features = [
    "MessageChannel",
    "MessagePort",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "console",
]

[features]
default = ["wee_alloc"]
wee_alloc = []