[package]
name = "romhack"
description = "A multi-platform patcher for gamecube and wii games"
authors = ["kipcode66 <kipcode66@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/kipcode66/geckopatcher"
license-file = "LICENSE"
keywords = ["romhack", "GameCube", "Wii"]
publish = false

[dependencies]
geckolib = { path = "../geckolib", default-features = false }
color-eyre = "^0.6"
async-std = "^1.12"
env_logger = { version = "^0.10", optional = true }
log = { version = "^0.4", optional = true }
futures = "^0.3"
clap = { version = "4.4.2", features = ["derive", "cargo"] }
toml = "^0.7"
indicatif = "^0.17"
num = "^0.4"
lazy_static = "^1.4"
colored = { version = "^2.0", optional = true }
clap_complete = { version = "4.4.1" }

[build-dependencies]

[dev-dependencies]

[features]
default = ["parallel"]
log = [
    "geckolib/log",
    "dep:env_logger",
    "dep:log",
    "async-std/log",
    "async-std/kv-log-macro",
]
progress = ["geckolib/progress", "colored"]
parallel = ["geckolib/parallel"]

[[example]]
name = "title"

[[example]]
name = "reproc"

[[example]]
name = "gen"
