[package]
name = "romhack"
description = "A multi-platform patcher for gamecube and wii games"
authors = ["kipcode66 <kipcode66@gmail.com>"]
version = "0.1.1"
edition = "2021"
rust-version = "1.76"
repository = "https://github.com/kipcode66/geckopatcher"
license-file = "LICENSE"
keywords = ["romhack", "GameCube", "Wii"]
publish = false

[dependencies]
geckolib = { path = "../geckolib", default-features = false, features = ["progress"]}
color-eyre = "^0.6"
async-std = "^1.12"
env_logger = { version = "^0.11", optional = true }
log = { version = "^0.4", optional = true }
futures = "^0.3"
clap = { version = "^4.5", features = ["derive", "cargo"] }
toml = "^0.8"
indicatif = "^0.17"
num = "^0.4"
lazy_static = "^1.4"
colored = { version = "^2.0" }
clap_complete = { version = "4.4.1" }

[build-dependencies]

[dev-dependencies]

[features]
default = ["parallel", "log"]
log = [
    "geckolib/log",
    "dep:env_logger",
    "dep:log",
    "async-std/log",
    "async-std/kv-log-macro",
]
parallel = ["geckolib/parallel"]

[[example]]
name = "title"

[[example]]
name = "reproc"

[[example]]
name = "gen"
