[package]
name = "web-gui-patcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
flume = "0.10.14"

# You only need serde if you want app persistence:
serde = { version = "^1.0", features = ["derive"] }

# web dependencies:
geckolib = { path = "../../geckolib", default-features = false, features = [
    "log",
    "web",
    "progress",
] }
eyre = "^0.6"
yew = { version = "0.20.0", default-features = false, features = ["csr"] }
console_log = "1.0.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
async-std = "1.12.0"
wasm-tracing-allocator = { version = "0.1.1", optional = true }
wasm-mt-pool = { version = "0.1.2", optional = true }
rayon = { version = "1.7.0", optional = true }
serde_closure = { version = "0.3.3", optional = true }
lazy_static = { version = "1.4.0" }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "HtmlOptionsCollection",
    "HtmlInputElement",
    "MessageChannel",
    "MessagePort",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "WorkerGlobalScope",
    "FileSystem",
    "FileSystemFileHandle",
    "FileSystemDirectoryHandle",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "FileSystemSyncAccessHandle",
    "FileSystemReadWriteOptions",
    "Navigator",
    "StorageManager",
    "console",
    "Window",
]

[features]
default = ["console_error_panic_hook"]
debug_alloc = ["wasm-tracing-allocator"]
generic_patch = []
parallel = ["geckolib/parallel", "rayon", "wasm-mt-pool", "serde_closure"]
