[package]
name = "web-gui-patcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
flume = "0.11.0"

# You only need serde if you want app persistence:
serde = { version = "^1.0", features = ["derive"] }

# web dependencies:
geckolib = { path = "../../geckolib", default-features = false, features = [
    "log",
    "web",
    "progress",
] }
eyre = "^0.6"
yew = { version = "0.21.0", default-features = false, features = ["csr"] }
console_log = "1.0.0"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
async-std = "1.12.0"
wasm-tracing-allocator = { version = "0.1.1", optional = true }
wasm-mt-pool = { version = "0.1.2", optional = true }
rayon = { version = "1.10.0", optional = true }
serde_closure = { version = "0.3.3", optional = true }
lazy_static = { version = "1.5.0" }
futures = { version = "0.3.30" }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "HtmlOptionsCollection",
    "HtmlInputElement",
    "MessageChannel",
    "MessagePort",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "WorkerGlobalScope",
    "FileSystem",
    "FileSystemFileHandle",
    "FileSystemDirectoryHandle",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "FileSystemSyncAccessHandle",
    "FileSystemReadWriteOptions",
    "Navigator",
    "StorageManager",
    "console",
    "Window",
]

[features]
default = ["console_error_panic_hook"]
debug_alloc = ["wasm-tracing-allocator"]
generic_patch = []
parallel = ["geckolib/parallel", "rayon", "wasm-mt-pool", "serde_closure"]
